<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"><item android:title="@string/connect_device" android:id="@+id/menuitem_connect_device"></item>
    
    <item android:id="@+id/menuitem_abort_connect_device" android:title="@string/abort_connect_device"></item>
    <item android:id="@+id/menuitem_disconnect_device" android:title="@string/disconnect_device"></item><item android:id="@+id/menuitem_forget_credentials" android:title="@string/forget_credentials"></item><item android:id="@+id/menuitem_edit_device" android:title="@string/edit_device"></item><item android:title="@string/remove_device" android:id="@+id/menuitem_remove_device"></item>
    <item android:id="@+id/menuitem_install_device_shortcut" android:title="@string/install_device_shortcut"></item>
    
    
    
</menu>
