<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nmeagen_menu_position" android:id="@+id/item1">
            <menu>
                <item android:title="@string/nmeagen_menu_position_degrees" android:id="@+id/nmeagen_menu_position_degrees"></item>
                <item android:title="@string/nmeagen_menu_position_degrees_minutes" android:id="@+id/nmeagen_menu_position_degrees_minutes"></item>
                <item android:title="@string/nmeagen_menu_position_degrees_min_sec" android:id="@+id/nmeagen_menu_position_degrees_min_sec"></item>
            </menu>
        </item>
    <item android:title="@string/nmeagen_menu_height" android:id="@+id/item5">
        <menu>
            <item android:title="@string/nmeagen_menu_height_meters" android:id="@+id/nmeagen_menu_height_meters"></item>
            <item android:title="@string/nmeagen_menu_height_feet" android:id="@+id/nmeagen_menu_height_feet"></item>
        </menu>
    </item>
</menu>
