<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000044"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout android:layout_width="wrap_content" android:id="@+id/linearLayout2" android:gravity="center" android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@drawable/bluetooth64" >
</ImageView>

        <TextView
            android:id="@+id/textView"
            style="@style/ActivityHeader"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center|bottom"
            android:text="@string/edit_bluetooth_device"
            android:textColor="#FFFFFF" >
</TextView>
    </LinearLayout>

    <TableRow>

        <TextView
            android:id="@+id/textView2"
            android:layout_weight="2"
            android:text="@string/bluetooth_name" />

        <EditText
            android:id="@+id/etDeviceName"
            android:layout_weight="5"
            android:editable="true" >

            <requestFocus />

        </EditText>
    </TableRow>

    <TableRow>
 
        <TextView
            android:layout_weight="2"
            android:text="@string/bluetooth_address" />

        <EditText
            android:id="@+id/etDeviceAddress"
            android:layout_weight="5"
            android:inputType="textCapCharacters"
            android:maxLines="1" >

        </EditText>

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tvPSK"
            android:layout_weight="2"
            android:hint="@+id/psk_hint"
            android:text="@string/psk" />

        <EditText
            android:id="@+id/etPSK"
            android:layout_weight="5"
            android:inputType="text" >

        </EditText>
    </TableRow>
    
    <TableRow>

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bluetooth_pin" />

        <EditText
            android:id="@+id/etDevicePIN"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="number" >
        </EditText>

    </TableRow>

    <TableRow>
        <TextView />
        <CheckBox android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:id="@+id/cbSecure" android:text="@string/bluetooth_secure"/>   
    </TableRow>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:gravity="center">
        <Button android:id="@+id/btnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel"></Button>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" >
</Button>
    </LinearLayout>

</TableLayout>